--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run client:serve-ssr",
+    "serve:ssr": "node dist/functions/server/main.js",
+    "build:ssr": "ng build && ng run client:server",
+    "prerender": "ng run client:prerender"
   },
   "private": true,
   "dependencies": {
@@ -17,7 +21,14 @@
     "@angular/forms": "^14.2.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/platform-server": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@firebase/messaging-types": "^0.6.1",
+    "@nguniversal/express-engine": "^14.2.3",
+    "express": "^4.15.2",
+    "firebase": "^9.16.0",
+    "firebase-admin": "^11.5.0",
+    "firebase-functions": "^4.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -26,13 +37,19 @@
     "@angular-devkit/build-angular": "^14.2.7",
     "@angular/cli": "~14.2.7",
     "@angular/compiler-cli": "^14.2.0",
+    "@nguniversal/builders": "^14.2.3",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.0.0",
+    "@types/node": "^14.15.0",
+    "domino": "^2.1.6",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "ws": "^8.12.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
